# ephemeral-minigame-server

./: LICENSE  README.md  docker-compose.yml  start.sh
constructor/: Dockerfile.lobby  Dockerfile.minigame  Dockerfile.proxy
controller/: .dockerignore  Cargo.toml  Dockerfile
controller/src/: brain.rs  client.rs  http.rs  main.rs  minigame_cluster.rs  transport.rs
dashboard/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
dashboard/src/: root.tsx
dashboard/src/components/: Computer.tsx
dashboard/src/routes/: [...404].tsx  index.tsx
dashboard/src/routes/api/: status.ts
minigameplugin/: .dockerignore  Dockerfile  build.gradle  settings.gradle
minigameplugin/src/main/resources/: plugin.yml
serverplugin/: .gitignore  Dockerfile  build.gradle  settings.gradle
serverplugin/src/main/java/com/sirn/: ControllerPlugin.java  HeadControllerPlugin.java
serverplugin/src/main/java/com/sirn/commands/: CloseCommand.java  RequestCommand.java
serverplugin/src/main/java/com/sirn/controller_connection/: HeadController.java
serverplugin/src/main/java/com/sirn/head_controller/: HeadController.java  RejoinReconnectHandler.java
serverplugin/src/main/java/com/sirn/packets/: AuthenticationKind.java  Packet.java  (+9 more)
serverplugin/src/main/resources/: bungee.yml  plugin.yml
servers/: .dockerignore  Dockerfile.lobby  Dockerfile.proxy  eula.txt
servers/assets/waterfall/: README.txt
waterfallplugin/: Dockerfile  build.gradle  settings.gradle
waterfallplugin/src/main/java/com/sirn/: HeadControllerPlugin.java
waterfallplugin/src/main/resources/: plugin.yml
(+40 files in other folders)
