[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
derive_more = "0.99.17"
env_logger        = "0.10.0"
log               = "0.4.14"
rmp               = "0.8.10"
rmp-serde         = "1.0.0"
serde             = "1.0.136"
serde_derive      = "1.0.136"
thiserror         = "1.0.30"
tokio = { version = "1.16.1", features = ["io-util", "net", "process", "macros", "rt-multi-thread", "sync", "time"] }
